Programación/AppJavaFx/ITV_TEST/src/main/kotlin/errors/StationError.kt
package errors

sealed class StationError(val message: String) {
    object StationNotFound: StationError("Error Station not found")
}